[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'utxo'
version = '1.0.0'

[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3'

[[bin]]
name = 'utxo'
path = 'src/main.rs'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'
sr-primitives = {path = "../core/sr-primitives", default-features = false }
substrate-basic-authorship = {path = "../core/basic-authorship", default-features = false }
substrate-consensus-aura = {path = "../core/consensus/aura", default-features = false }
primitives = { package = "substrate-primitives",  path = "../core/primitives", default-features = false }
runtime_io = { package = "sr-io", path = "../core/sr-io", default-features = false }
substrate-cli = { path = "../core/cli"}
substrate-network = { path = "../core/network"}
substrate-inherents = { path = "../core/inherents"}
substrate-transaction-pool = { package="substrate-transaction-pool", path = "../core/transaction-pool"}
substrate-service = { path = "../core/service"}
substrate-executor = { path = "../core/executor"}
substrate-client = { path = "../core/client"}
utxo-runtime = {path = "runtime"}
ctrlc = { version = "3.0", features = ["termination"] }

[workspace]




